# open-svo2

./: .gitignore  QUICKSTART.md  README.md  format.md  mkdocs.yml  pyproject.toml  test_conversion.py
.github/workflows/: docs.yml
docs/: api.md  format.md  index.md
docs/stylesheets/: extra.css
examples/: basic_usage.py
src/open_svo2/: __init__.py  _cli.py  cli.py  convert.py  imu.py  intrinsics.py  metadata.py
src/opensvo2/: extractor.py  intrinsics.py  metadata.py
src/svo2_extract/: __init__.py  extractor.py
