[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svo2-extract"
version = "0.1.0"
description = "Extract raw H.265 video and sensor data from Stereolabs SVO2 (MCAP) files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tianshu", email = "tianshu@example.com"},
]
keywords = ["svo2", "stereolabs", "mcap", "h265", "hevc", "video", "extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcap>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
svo2-extract = "svo2_extract.cli:main"

[project.urls]
Homepage = "https://github.com/tianshu/svo2-extract"
Repository = "https://github.com/tianshu/svo2-extract"
Issues = "https://github.com/tianshu/svo2-extract/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/svo2_extract"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
