[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-svo2"
version = "0.1.0"
description = "Open-source reverse-engineering of the StereoLabs SVO2 file format."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tianshu Huang", email = "tianshu2@andrew.cmu.edu"},
]
keywords = ["svo2", "stereolabs", "mcap", "extraction"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "av>=16.1.0",
    "jaxtyping>=0.3.7",
    "mcap>=1.0.0",
    "scipy>=1.17.0",
    "toml>=0.10.2",
    "tyro>=1.0.6",
    "wadler-lindig>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
