[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-svo2"
version = "0.1.0"
description = "Open-source reverse-engineering of the StereoLabs SVO2 file format."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tianshu Huang", email = "tianshu2@andrew.cmu.edu"},
]
keywords = ["svo2", "stereolabs", "mcap", "extraction"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "av>=16.1.0",
    "jaxtyping>=0.3.7",
    "mcap>=1.0.0",
    "scipy>=1.17.0",
    "toml>=0.10.2",
    "tyro>=1.0.6",
    "wadler-lindig>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.10.0",
]
docs = [
    # Most recent as of 16.04.2025; exact versions shouldn't matter unless the
    # API is changed, so we pin here just in case.
    "mkdocs == 1.6.*",
    "mkdocs-material == 9.6.*",
    "mkdocstrings-python-xref == 1.16.3",
    "mkdocstrings-python == 1.16.6",
    "mkdocstrings == 0.29.*",
    # wait until griffe/mkdocstrings-python correctly handle type parameters
    "griffe == 1.8.0",
    "ruff >= 0.10.0",
    "click==8.2.1"
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
